force-app/main/default/objects/Account/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <label>Product Classes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accent Chairs &amp; Recliners</fullName>
            </value>
            <value>
                <fullName>Air Conditioner</fullName>
            </value>
            <value>
                <fullName>Air Cooler</fullName>
            </value>
            <value>
                <fullName>Air Purifiers</fullName>
            </value>
            <value>
                <fullName>Awnings</fullName>
            </value>
            <value>
                <fullName>Bar Stools</fullName>
            </value>
            <value>
                <fullName>Beach Carts &amp; Wagons</fullName>
            </value>
            <value>
                <fullName>Beach Chairs &amp; Umbrellas</fullName>
            </value>
            <value>
                <fullName>Benches &amp; Ottomans</fullName>
            </value>
            <value>
                <fullName>Bookcases</fullName>
            </value>
            <value>
                <fullName>Camping Accessories</fullName>
            </value>
            <value>
                <fullName>Camping Chairs &amp; Tables</fullName>
            </value>
            <value>
                <fullName>Camping Tents</fullName>
            </value>
            <value>
                <fullName>Ceiling Fans</fullName>
            </value>
            <value>
                <fullName>Ceramic &amp; Fan Heaters</fullName>
            </value>
            <value>
                <fullName>Chairs</fullName>
            </value>
            <value>
                <fullName>Charcoal Grills</fullName>
            </value>
            <value>
                <fullName>Closet Storage</fullName>
            </value>
            <value>
                <fullName>Coffee Tables, Side &amp; End Tables</fullName>
            </value>
            <value>
                <fullName>Console Tables &amp; Sideboards</fullName>
            </value>
            <value>
                <fullName>Coolers &amp; Thermal Bags</fullName>
            </value>
            <value>
                <fullName>Dining Chairs</fullName>
            </value>
            <value>
                <fullName>Dining Sets</fullName>
            </value>
            <value>
                <fullName>Dining Storage</fullName>
            </value>
            <value>
                <fullName>Dining Tables</fullName>
            </value>
            <value>
                <fullName>Desk &amp; Floor Fans</fullName>
            </value>
            <value>
                <fullName>Desks</fullName>
            </value>
            <value>
                <fullName>Electric Grills</fullName>
            </value>
            <value>
                <fullName>Electric Heaters &amp; Convectors</fullName>
            </value>
            <value>
                <fullName>Fire Pits &amp; Fire Tables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>