force-app/main/default/objects/Account/fields/Product_Families1__c.field-meta.xml
<CustomField>
    <fullName>Product_Families1__c</fullName>
    <label>Product Families</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H - !DEA HOME</fullName>
            </value>
            <value>
                <fullName>G - !DEA GARDEN</fullName>
            </value>
            <value>
                <fullName>B - !DEA HEATING &amp; FAN</fullName>
            </value>
            <value>
                <fullName>P - !DEA KIDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>