force-app/main/default/objects/Account/fields/Product_Families__c.field-meta.xml
<CustomField>
    <fullName>Product_Families__c</fullName>
    <description>Product categories manufactured by the supplier</description>
    <inlineHelpText>Select all product families this supplier can manufacture.</inlineHelpText>
    <label>Product Fam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H-!DEA Home</fullName>
            </value>
            <value>
                <fullName>G-!DEA Garden</fullName>
            </value>
            <value>
                <fullName>B-!DEA Heating&amp;Fan</fullName>
            </value>
            <value>
                <fullName>P-!IDEA Kids</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>