force-app/main/default/objects/Account/fields/Product_Sub_Families__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Families__c</fullName>
    <description>Specific product subcategories manufactured by the supplier.</description>
    <inlineHelpText>Select all product subfamilies this supplier can manufacture.</inlineHelpText>
    <label>Product Sub-Families</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Living Room Furniture</fullName>
            </value>
            <value>
                <fullName>Kitchen &amp; Dining Furniture</fullName>
            </value>
            <value>
                <fullName>Office Furniture</fullName>
            </value>
            <value>
                <fullName>Storage &amp; Organization</fullName>
            </value>
            <value>
                <fullName>Outdoor Furniture</fullName>
            </value>
            <value>
                <fullName>Outdoor Shades &amp; Structures</fullName>
            </value>
            <value>
                <fullName>Outdoor Cooking</fullName>
            </value>
            <value>
                <fullName>Camping &amp; Beach</fullName>
            </value>
            <value>
                <fullName>Folding Furniture</fullName>
            </value>
            <value>
                <fullName>Fans</fullName>
            </value>
            <value>
                <fullName>Indoor Heaters</fullName>
            </value>
            <value>
                <fullName>Outdoor Heaters</fullName>
            </value>
            <value>
                <fullName>Air Treatment</fullName>
            </value>
            <value>
                <fullName>Kids&apos; furniture</fullName>
            </value>
            <value>
                <fullName>Outdoor Toys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>