force-app/main/default/objects/Account/fields/PropietarioOrigen__c.field-meta.xml
<CustomField>
    <fullName>PropietarioOrigen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario (origen)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas_PropietarioOrigen</relationshipName>
    <type>Lookup</type>
</CustomField>