force-app/main/default/objects/Account/fields/Puerto__c.field-meta.xml
<CustomField>
    <fullName>Puerto__c</fullName>
    <label>Puerto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PaisDelPuerto__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Puertos</valueSetName>
    </valueSet>
</CustomField>