force-app/main/default/objects/Account/fields/RazonSocial__c.field-meta.xml
<CustomField>
    <fullName>RazonSocial__c</fullName>
    <label>Razón social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>