force-app/main/default/objects/Account/fields/RazonSocialChino__c.field-meta.xml
<CustomField>
    <fullName>RazonSocialChino__c</fullName>
    <label>Razón social en Chino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>