force-app/main/default/objects/Account/fields/Registrar_Libra__c.field-meta.xml
<CustomField>
    <fullName>Registrar_Libra__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la cuenta se debe registrar en Libra</description>
    <label>Registrar en Libra</label>
    <type>Checkbox</type>
</CustomField>