force-app/main/default/objects/Account/fields/Registro_Libra_Sociedades__c.field-meta.xml
<CustomField>
    <fullName>Registro_Libra_Sociedades__c</fullName>
    <description>Indica las sociedades (do america, do core) para las cuales esta cuanta ha sido registrada en Libra</description>
    <label>Registro Libra Sociedades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>700</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>