force-app/main/default/objects/Account/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <label>Saldo pendiente</label>
    <summarizedField>Cartera_Importe__c.Importe__c</summarizedField>
    <summaryForeignKey>Cartera_Importe__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>