force-app/main/default/objects/Account/fields/SaldoAportacionesComercialDisponibles__c.field-meta.xml
<CustomField>
    <fullName>SaldoAportacionesComercialDisponibles__c</fullName>
    <formula>AportacionesComercialesDisponibles__c - PagoAportacionesComerciales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total available commercial contributions less total payment of commercial contributions</inlineHelpText>
    <label>Saldo aportaciones comercial disponibles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>