force-app/main/default/objects/Account/fields/SaldoAportacionesComerciales__c.field-meta.xml
<CustomField>
    <fullName>SaldoAportacionesComerciales__c</fullName>
    <formula>AportacionesComerciales__c - PagoAportacionesComerciales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total commercial contributions less total payment of commercial contributions</inlineHelpText>
    <label>Saldo aportaciones comerciales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>