force-app/main/default/objects/Account/fields/Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Sociedad__c</fullName>
    <label>Sociedad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pacific Global</fullName>
            </value>
            <value>
                <fullName>Do Core</fullName>
            </value>
            <value>
                <fullName>Do América</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>