force-app/main/default/objects/Account/fields/Supplier_Rating__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Rating__c</fullName>
    <label>Supplier Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Excellent</fullName>
            </value>
            <value>
                <fullName>B- Good</fullName>
            </value>
            <value>
                <fullName>C- Acceptable</fullName>
            </value>
            <value>
                <fullName>D- Not Recommended</fullName>
            </value>
            <value>
                <fullName>Pending Evaluation</fullName>
                <label>E - Pending Evaluation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>