force-app/main/default/objects/Account/fields/Supplier_Source__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Source__c</fullName>
    <label>Supplier Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade FAIR</fullName>
            </value>
            <value>
                <fullName>Internet Search</fullName>
            </value>
            <value>
                <fullName>Alibaba</fullName>
            </value>
            <value>
                <fullName>Made-in-China</fullName>
            </value>
            <value>
                <fullName>Existing Supplier</fullName>
            </value>
            <value>
                <fullName>Linkeding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>