force-app/main/default/objects/Account/fields/SWIFT__c.field-meta.xml
<CustomField>
    <fullName>SWIFT__c</fullName>
    <label>SWIFT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>