force-app/main/default/objects/Account/fields/SWIFTBancoIntermediario__c.field-meta.xml
<CustomField>
    <fullName>SWIFTBancoIntermediario__c</fullName>
    <label>SWIFT banco intermediario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>