force-app/main/default/objects/Account/fields/Tel_fono_Gerente_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono_Gerente_Proveedor__c</fullName>
    <label>Teléfono Gerente Proveedor</label>
    <type>Phone</type>
</CustomField>