force-app/main/default/objects/Account/fields/TelefonoBanco__c.field-meta.xml
<CustomField>
    <fullName>TelefonoBanco__c</fullName>
    <label>Telefono banco</label>
    <type>Phone</type>
</CustomField>