force-app/main/default/objects/Account/fields/TelefonoComercial__c.field-meta.xml
<CustomField>
    <fullName>TelefonoComercial__c</fullName>
    <label>Teléfono comercial</label>
    <type>Phone</type>
</CustomField>