force-app/main/default/objects/Account/fields/TelefonoFinanciero__c.field-meta.xml
<CustomField>
    <fullName>TelefonoFinanciero__c</fullName>
    <label>Telefono financiero</label>
    <type>Phone</type>
</CustomField>