force-app/main/default/objects/Account/fields/Tiene_Pedidos__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Pedidos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca para los Proveedores que tienen Pedidos asociados</description>
    <inlineHelpText>It is marked for suppliers who have associated orders</inlineHelpText>
    <label>Tiene Pedidos</label>
    <type>Checkbox</type>
</CustomField>