force-app/main/default/objects/Account/fields/TitularCuenta__c.field-meta.xml
<CustomField>
    <fullName>TitularCuenta__c</fullName>
    <label>Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>