force-app/main/default/objects/Account/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>Campo en formato &quot;Provincia, Pais&quot; para incluir en la factura</description>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>