force-app/main/default/objects/Account/fields/vinculo_reporte__c.field-meta.xml
<CustomField>
    <fullName>vinculo_reporte__c</fullName>
    <formula>HYPERLINK(&quot;/apex/ReporteMargenDetail?idCliente=&quot;&amp;Id, &quot;Margen Cliente&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporte Margen</label>
    <type>Text</type>
</CustomField>